French translation update.

--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -196,6 +196,11 @@ ConnectivityToadlet.remote=DISTANT
 ConnectivityToadlet.sentReceivedTitle=Paquets envoyés/reçus
 ConnectivityToadlet.summaryTitle=Raccordement réseau
 ConnectivityToadlet.title=Connexion internet de ${nodeName}
+ConnectivityToadlet.status.DEFINITELY_NATED=Derrière un NAT
+ConnectivityToadlet.status.DEFINITELY_PORT_FORWARDED=Port routé
+ConnectivityToadlet.status.DONT_KNOW=Statut inconnu
+ConnectivityToadlet.status.MAYBE_NATED=Peut-être derrière un NAT
+ConnectivityToadlet.status.MAYBE_PORT_FORWARDED=Port peut-être routé
 ContentDataFilter.unknownCharset=La page que vous essayez d'afficher utilise un jeu de caractère inconnu. Cela signifie que le noeud ne pourra pas la filtrer, et qu'elle pourait compromettre votre anonymat.
 ContentDataFilter.unknownCharsetTitle=Jeu de caractères inconnu !
 ContentDataFilter.warningUnknownCharsetTitle=Attention : Jeu de caractères inconnu (${charset})
@@ -929,6 +934,8 @@ Node.oneConnectionPerIPLong=Ne pas autoriser plus d'une connexion par adresse IP
 Node.openJDKMightBeVulnerableXML=Mettez à jour Java ! Votre version de Java peut être vulnérable à des failles de sécurité importantes (contacter un serveur distant pour connaître votre adresse IP, ce qui détruit votre anonymat). Malheureusement, il est difficile à Freenet de détecter si cela est corrigé ou pas. Si vous n'êtes pas sûr, n'utilisez ni Thaw ni Freetalk tant que vous n'avez pas mis à jour Java (probablement via les mises à jour automatiques de votre ordinateur) et redémarré Freenet et Thaw.
 Node.opennetEnabled=Activer le mode peu sécurisé (connexion automatique à des nœuds inconnus) ?
 Node.opennetEnabledLong=Activer le mode peu sécurisé (Opennet) ? Si vous faites cela, votre nœud échangera automatiquement des références avec des Inconnus (inconnu, par opposition aux amis). Cela implique que n'importe qui peut savoir que vous possédez un nœud Freenet et que certaines attaques seront plus faciles. Si vous connaissez suffisamment de personnes utilisant Freenet, vous devriez établir des connexions de confiance (Amis) avec eux et désactiver cette fonction.
+Node.opennetPort=Port opennet (UDP)
+Node.opennetPortLong=Le port UDP utilisé par le noeud pour communiquer avec les autres noeuds inconnus (noeuds opennet). Il doit être routé si possible. Nous utilisons un port séparé pour le darknet (noeuds amis).
 Node.outBWLimit=Limite d'upload (octet/seconde)
 Node.outBWLimitLong=Limite d'upload (octet/seconde); le noeud ne devrait jamais la dépasser
 Node.paddDataPackets=Ajouter un volume aléatoire de données aux paquets envoyés ? (LISEZ L'AVERTISSEMENT !)
@@ -945,6 +952,8 @@ Node.routeAccordingToOurPeersLocation=Devons nous utiliser la position des Amis 
 Node.routeAccordingToOurPeersLocationLong=Devons nous utiliser la position des Amis de nos Amis pour le routage ? Cela aide le routage mais pourrait aider un attaquant potentiel.
 Node.runDir=Répertoire système de Freenet
 Node.runDirLong=Chemin du répertoire système de Freenet. Il peut être supprimé/nettoyé quand Freenet n'est pas en fonctionnement.
+Node.skipWrapperWarning=Shunter l'avertissement "n'utilise pas le wrapper" ?
+Node.skipWrapperWarningLong=Si oui, l'avertissement "n'utilise pas le wrapper" ne sera plus affiché. Notez que cela masque uniquement le message à compter du redémarrage suivant.
 Node.slashdotCacheLifetime=Pendant combien de temps les données du cache des requêtes récentes doivent être conservées ?
 Node.slashdotCacheLifetimeLong=Pendant combien de temps les données du cache des requêtes récentes doivent-elles être conservées (en millisecondes) ? Notez que cela durera plus longtemps en cas d'arrêt du nœud de toute manière.
 Node.slashdotCacheSize=Taille maximale du cache des requêtes récentes.
