French translation update for 1292

--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -1259,6 +1259,8 @@ QueueToadlet.badMIMETypeIntro=Les téléchargements suivants sont de type ${type
 QueueToadlet.bulkDownloadSelectOptionDirect=dans l'espace temporaire
 QueueToadlet.bulkDownloadSelectOptionDisk=sur le disque
 QueueToadlet.change=Changer
+QueueToadlet.changeDownloadPriorities=Changer la priorité des téléchargements
+QueueToadlet.changeUploadPriorities=Changer la priorité des insertions
 QueueToadlet.compatModeLabel=Mode de compatibilité
 QueueToadlet.compatibilityMode=Mode de compatibilité
 QueueToadlet.completedDU=Insertions de dossiers terminées (${size})
@@ -1277,6 +1279,8 @@ QueueToadlet.confirmPanicButtonPageTitle=Bouton panic, confirmation
 QueueToadlet.confirmPanicButtonYes=Oui, tout supprimer
 QueueToadlet.delete=Supprimer
 QueueToadlet.deleteFileFromTemp=Supprimer (fichier temp.)
+QueueToadlet.deleteFilesFromTemp=SUPPRIMER LES FICHIERS
+QueueToadlet.disableFilter=Désactiver le filtre de contenu
 QueueToadlet.download=Téléchargement
 QueueToadlet.downloadFiles=Téléchargement groupés
 QueueToadlet.downloadFilesInstructions=Vous pouvez coller une liste de clés à télécharger dans la boite ci-dessous (une par ligne)
@@ -1366,10 +1370,14 @@ QueueToadlet.reason=Raison
 QueueToadlet.recommend=Recommander
 QueueToadlet.recommendAFileToFriends=Recommander un fichier aux amis
 QueueToadlet.recommendDescription=Description du fichier :
+QueueToadlet.recommendFilesToFriends=Recommander les fichiers aux noeuds amis
 QueueToadlet.recommendToFriends=Recommander aux amis
 QueueToadlet.remove=Supprimer
+QueueToadlet.removeFilesFromList=Supprimer les fichiers de la liste
 QueueToadlet.requestNavigation=Parcours des requètes
 QueueToadlet.restart=Redémarrer
+QueueToadlet.restartDownloads=Redémarrer les téléchargements
+QueueToadlet.restartUploads=Redémarrer les insertions
 QueueToadlet.returnToQueuePage=Retourner à la ${link}file d'attente${/link}.
 QueueToadlet.shuttingDown=La file d'attente des téléchargements et insertions n'est pas disponible, parce que le nœud est en cours d'arrêt.
 QueueToadlet.shuttingDownTitle=Le nœud est en cours d'arrêt.
@@ -1653,6 +1661,7 @@ StatisticsToadlet.resendBytes=Octets renvoyés : ${total}
 StatisticsToadlet.routingDisabled=Pas de routage (nous sommes connectés à ce nœud mais l'un de nous refuse de router le traffic)
 StatisticsToadlet.routingDisabledShort=Pas de routage
 StatisticsToadlet.running=En cours
+StatisticsToadlet.runningBlockTransfers=Transfert de blocs: ${sends} envoyés, ${receives} reçus
 StatisticsToadlet.statisticGatheringTitle=Récupération des statistiques
 StatisticsToadlet.storeJobsByPriority=Enregistrer les vérifications du datastore par priorité
 StatisticsToadlet.successByHTL=Taux de succès, par HTL (récupération distante)
