Change inconsistent /link to /page

--- a/src/freenet/l10n/freenet.l10n.nl.properties
+++ b/src/freenet/l10n/freenet.l10n.nl.properties
@@ -1394,7 +1394,7 @@ FProxyToadlet.contentTypeLabel=Inhoudstype:
 FProxyToadlet.expectedKeyButGot=Er werd een Freenet key verwacht, maar in plaats daarvan was het:
 FProxyToadlet.welcome=Browse en zoek naar Freesites, (web sites die anoniem beschikbaar zijn binnen Freenet)
 FProxyToadlet.dangerousContentTitle=Potentieel gevaarlijke inhoud
-FProxyToadlet.downloadInBackgroundToDisk=Download een bestand op de achtergrond en sla het op in de map ${dir}. Je krijgt een melding zodra de download klaar is. De voortgang van de download kun je volgen op de ${page}bestandsuitwisselingspagina${page}.
+FProxyToadlet.downloadInBackgroundToDisk=Download een bestand op de achtergrond en sla het op in de map ${dir}. Je krijgt een melding zodra de download klaar is. De voortgang van de download kun je volgen op de ${page}bestandsuitwisselingspagina${/page}.
 FProxyToadlet.statsTitle=Statistieken
 FProxyToadlet.chatForums=Informatie over hoe je anoniem via Freenet met andere gebruikers kunt chatten
 FProxyToadlet.dangerousRSSTitle=Potentieel gevaarlijke inhoud (RSS)
