--- a/src/freenet/l10n/freenet.l10n.ru.properties
+++ b/src/freenet/l10n/freenet.l10n.ru.properties
@@ -373,7 +373,7 @@ FProxyToadlet.dangerousContentTitle=Потенциально опасный фа
 FProxyToadlet.dangerousRSS=Фринет обнаружил что файл, который вы пытаетесь загрузить - RSS. RSS не может быть отфильтрован Фринетом, и может содержать веб-жучки (встроенные изображения и т.п., которые могут обнаружить ваш IP-адрес автору сайта и тем самым разрушить вашу анонимность). Firefox 2.0 и Internet Explorer 7.0 откроют этот файл как RSS даже если его содержимое - "${type}".
 FProxyToadlet.dangerousRSSSubtitle=RSS-ленты могут быть опасны
 FProxyToadlet.dangerousRSSTitle=Содержимое может быть опасно (RSS)
-FProxyToadlet.downloadInBackgroundToDisk=файл в фоновом режиме и сохранить его в каталог ${dir}. Вы сможете отследить процесс загрузки этого файла на ${page}странице загрузок${/link}. Когда загрузка будет завершена, вы получите уведомление.
+FProxyToadlet.downloadInBackgroundToDisk=файл в фоновом режиме и сохранить его в каталог ${dir}. Вы сможете отследить процесс загрузки этого файла на ${page}странице загрузок${/page}. Когда загрузка будет завершена, вы получите уведомление.
 FProxyToadlet.downloadInBackgroundToDiskButton=Загрузить
 FProxyToadlet.downloadInBackgroundToTempSpace=Загрузить файл в фоновом режиме. Он будет доступен через ${page}страницу загрузок${/link}, и будет потерян если вы деинсталлируете Фринет, нажмете «кнопку паники», или забудете ключевой пароль. Когда загрузка будет завершена, вы получите уведомление.
 FProxyToadlet.downloadInBackgroundToTempSpaceButton=Получить
