Another /link not /page.

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -380,7 +380,7 @@ FProxyToadlet.dangerousRSSSubtitle=RSS-Feed, könnte gefährlich sein
 FProxyToadlet.dangerousRSSTitle=Potenziell gefährlicher Inhalt (RSS)
 FProxyToadlet.downloadInBackgroundToDisk=Im Hintergrund herunterladen und im Downloads-Verzeichnis speichern
 FProxyToadlet.downloadInBackgroundToDiskButton=Download
-FProxyToadlet.downloadInBackgroundToTempSpace=Lade die Datei im Hintergrund herunter. Der Zugriff auf die Datei ist <strong>nur</strong> möglich auf der ${page}Downloads-Seite${/link}. Die Datei geht verloren, wenn du Freenet deinstallierst, den Panik-Knopf anklickst oder das Master-Passwort verlierst. Wenn das Herunterladen beendet ist, wirst du benachrichtigt.
+FProxyToadlet.downloadInBackgroundToTempSpace=Lade die Datei im Hintergrund herunter. Der Zugriff auf die Datei ist <strong>nur</strong> möglich auf der ${page}Downloads-Seite${/page}. Die Datei geht verloren, wenn du Freenet deinstallierst, den Panik-Knopf anklickst oder das Master-Passwort verlierst. Wenn das Herunterladen beendet ist, wirst du benachrichtigt.
 FProxyToadlet.downloadInBackgroundToTempSpaceButton=Herunterladen
 FProxyToadlet.downloadToDiskSecurityWarning=${bold}WARNUNG${/bold}: Dies speichert die Datei unverschlüsselt auf die Festplatte. Wenn du nicht die Festplatte verschlüsselt hast, z.B. mit "truecrypt", könnte dies ein Sicherheitsrisiko sein.
 FProxyToadlet.downloads=Dateien welche von Freenet heruntergeladen werden
