--- a/src/freenet/l10n/freenet.l10n.it.properties
+++ b/src/freenet/l10n/freenet.l10n.it.properties
@@ -389,7 +389,7 @@ FProxyToadlet.dangerousRSSSubtitle=I feed RSS possono costituire un pericolo
 FProxyToadlet.dangerousRSSTitle=Contentuto Potenzialmente Pericoloso (RSS)
 FProxyToadlet.downloadInBackgroundToDisk=Scarica in background e conserva nella directory dei download
 FProxyToadlet.downloadInBackgroundToDiskButton=Scarica
-FProxyToadlet.downloadInBackgroundToTempSpace=Scarica il file in background. Esso sarà accessibile alla ${page}pagina dei download${/link}, e andrà perso se si disinstalla Freenet, se si perde la password, o se si usa il bottone emergenza. Un messaggio di notifica apparirà al completamento del download.
+FProxyToadlet.downloadInBackgroundToTempSpace=Scarica il file in background. Esso sarà accessibile alla ${page}pagina dei download${/page}, e andrà perso se si disinstalla Freenet, se si perde la password, o se si usa il bottone emergenza. Un messaggio di notifica apparirà al completamento del download.
 FProxyToadlet.downloadInBackgroundToTempSpaceButton=Richiama
 FProxyToadlet.downloads=File in corso di download da Freenet
 FProxyToadlet.downloadsTitle=Download
