--- a/src/freenet/l10n/freenet.l10n.nl.properties
+++ b/src/freenet/l10n/freenet.l10n.nl.properties
@@ -1366,7 +1366,7 @@ FProxyToadlet.categoryQueue=Bestandsuitwisseling
 FProxyToadlet.friendsTitle=Verbindingen met vrienden
 FProxyToadlet.filenameLabel=Bestandsnaam:
 FProxyToadlet.categoryBrowsing=Navigeren
-FProxyToadlet.downloadInBackgroundToTempSpace=Vraag een bestand op, op de achtergrond. Hierna is deze actie toegankelijk via de ${page}bestandsuitwisselingspagina${/link}. Deze actie zal verloren zijn op het moment dat je freenet deïnstalleerd, klikt op de paniekknop of waneer je het hoofdwachtwoord verliest.
+FProxyToadlet.downloadInBackgroundToTempSpace=Vraag een bestand op, op de achtergrond. Hierna is deze actie toegankelijk via de ${page}bestandsuitwisselingspagina${/page}. Deze actie zal verloren zijn op het moment dat je freenet deïnstalleerd, klikt op de paniekknop of waneer je het hoofdwachtwoord verliest.
 FProxyToadlet.addFriendTitle=Vriend toevoegen
 FProxyToadlet.dangerousRSSSubtitle=RSS feeds zijn potentieel gevaarlijk
 FProxyToadlet.notFoundTitle=Niet gevonden
