--- a/src/freenet/l10n/freenet.l10n.se.properties
+++ b/src/freenet/l10n/freenet.l10n.se.properties
@@ -266,7 +266,7 @@ FProxyToadlet.dangerousRSSSubtitle=RSS flöde kan vara farligt
 FProxyToadlet.dangerousRSSTitle=Potentiellt farligt inehåll (RSS)
 FProxyToadlet.downloadInBackgroundToDisk=Ladda ner i bakgrunden och spara i downloads mappen
 FProxyToadlet.downloadInBackgroundToDiskButton=Hämta
-FProxyToadlet.downloadInBackgroundToTempSpace=Hämta filen i bakgrunden. Den kommer att vara tillgänglig <strong>endast</strong> genom ${page}hämtningssidan${/link}, och kommer att försvinna om du avinstallerar Freenet, klickar på panikknappen, eller tappar bort huvudlösenordet. Du kommer att få reda på när hämtningen är klar.
+FProxyToadlet.downloadInBackgroundToTempSpace=Hämta filen i bakgrunden. Den kommer att vara tillgänglig <strong>endast</strong> genom ${page}hämtningssidan${/page}, och kommer att försvinna om du avinstallerar Freenet, klickar på panikknappen, eller tappar bort huvudlösenordet. Du kommer att få reda på när hämtningen är klar.
 FProxyToadlet.downloads=Filer som hämtas hem från Freenet
 FProxyToadlet.downloadsTitle=Hämtningar
 FProxyToadlet.errorIsFatal=Det här är ett fatalt fel. Det är osannolikt att ett nytt försök kommer lösa problemet.
