--- a/src/freenet/l10n/freenet.l10n.ru.properties
+++ b/src/freenet/l10n/freenet.l10n.ru.properties
@@ -375,7 +375,7 @@ FProxyToadlet.dangerousRSSSubtitle=RSS-ленты могут быть опасн
 FProxyToadlet.dangerousRSSTitle=Содержимое может быть опасно (RSS)
 FProxyToadlet.downloadInBackgroundToDisk=файл в фоновом режиме и сохранить его в каталог ${dir}. Вы сможете отследить процесс загрузки этого файла на ${page}странице загрузок${/page}. Когда загрузка будет завершена, вы получите уведомление.
 FProxyToadlet.downloadInBackgroundToDiskButton=Загрузить
-FProxyToadlet.downloadInBackgroundToTempSpace=Загрузить файл в фоновом режиме. Он будет доступен через ${page}страницу загрузок${/link}, и будет потерян если вы деинсталлируете Фринет, нажмете «кнопку паники», или забудете ключевой пароль. Когда загрузка будет завершена, вы получите уведомление.
+FProxyToadlet.downloadInBackgroundToTempSpace=Загрузить файл в фоновом режиме. Он будет доступен через ${page}страницу загрузок${/page}, и будет потерян если вы деинсталлируете Фринет, нажмете «кнопку паники», или забудете ключевой пароль. Когда загрузка будет завершена, вы получите уведомление.
 FProxyToadlet.downloadInBackgroundToTempSpaceButton=Получить
 FProxyToadlet.downloadToDiskSecurityWarning=${bold}Внимание${/bold}: это действие приведет к тому что файл будет сохранен на ваш диск в незашифрованом виде, что может стать угрозой безопасности если вы не используете шифрование всего диска.
 FProxyToadlet.downloads=Файлы, загруженные из Фринета
