Fix a couple of cases where we need to change the l10n strings as well to deal with /link vs /<link name> issue.

--- a/src/freenet/l10n/freenet.l10n.nl.properties
+++ b/src/freenet/l10n/freenet.l10n.nl.properties
@@ -1165,9 +1165,9 @@ UserAlertManager.dumpEventsButton=Verwijder de triviale meldingen
 UserAlertManager.clickForMore=Klik op een melding om deze te verbergen of om meer informatie te tonen.
 UserAlertManager.errorCountLabel=Fouten:
 ChatForumsToadlet.title=Praat met andere mensen op Freenet
-ChatForumsToadlet.fms=${fms}FMS${/link} - Het Freenet Message System is een andere programma voor discussiegroepen. Dit programma is echter niet vatbaar voor het type spam aanvallen wat Frost moeilijker te gebruiken maakt. Het is iets moeilijker om te configureren als Frost. Zie ${fms-help}hier${/link} voor meer informatie over het installeren en configureren van FMS. 
+ChatForumsToadlet.fms=${fms}FMS${/fms} - Het Freenet Message System is een andere programma voor discussiegroepen. Dit programma is echter niet vatbaar voor het type spam aanvallen wat Frost moeilijker te gebruiken maakt. Het is iets moeilijker om te configureren als Frost. Zie ${fms-help}hier${/link} voor meer informatie over het installeren en configureren van FMS. 
 ChatForumsToadlet.content1=Op dit moment is er nog geen ingebouwde ondersteuning voor fora op freenet. Er zijn echter wel twee veelgebruikte programma's beschikbaar waarmee je anoniem kan chatten op Freenet:
-ChatForumsToadlet.frost=${frost-freenet}Frost${/link} (${frost-web}op het web${/link}) - De originele Freenet forumclient. Helaas is Frost vatbaar voor onzichtbare spam waardoor veel fora onbruikbaar worden (rood aangegeven). Voor meer informatie en hulp bij het gebruik van Frost kun je ${frost-help}hier${/link} terecht.
+ChatForumsToadlet.frost=${frost-freenet}Frost${/frost-freenet} (${frost-web}op het web${/frost-web}) - De originele Freenet forumclient. Helaas is Frost vatbaar voor onzichtbare spam waardoor veel fora onbruikbaar worden (rood aangegeven). Voor meer informatie en hulp bij het gebruik van Frost kun je ${frost-help}hier${/link} terecht.
 ChatForumsToadlet.content2=Het Freenet team heeft niet bijgedragen aan deze applicaties nog hebben ze de applicaties aan een kwaliteitsonderzoek onderworpen. Freenet 0.8 zal een geintegreerd systeem hebben voor discussiegroepen genaamd 'Freetalk' wat geinspireerd is door de structuur van FMS.
 ToadletContextImpl.methodNotAllowed=HTTP methode niet toegestaan
 ToadletContextImpl.headersLineTooLong=Regel is te lang om de begininformatie te verwerken
