Another messy fix

--- a/src/freenet/l10n/freenet.l10n.fi.properties
+++ b/src/freenet/l10n/freenet.l10n.fi.properties
@@ -213,9 +213,9 @@ ContentFilter.textPlainReadAdvice=Tekstitiedosto - ei vaarallinen, ellei selaime
 ContentFilter.textPlainWriteAdvice=Tekstitiedosto - ei vaarallinen, ellet lisää tiivistettyä tietoa
 DarknetAddRefToadlet.explainBox2=Yhdistääksesi ystävään, sinun täytyy vaihtaa solmureferenssejä hänen kanssa. Solmureferenssi on pieni tiedosto, joka sisältää tarpeellisen tiedon, jotta hänen solmu pystyisi yhdistämään solmuusi. Sinun täytyy lisätä hänen solmureferenssi ja hänen sinun, jotta voitte yhdistää toisiinne. Alla näet solmureferenssisi.
 DarknetAddRefToadlet.explainBoxTitle=Miksi sinun kannattaa yhdistää ystäviisi, jotka pyörittävät Freenettiä
-DarknetAddRefToadlet.explainInstallerNonWindows=Löydät viimeisimmän ei Windowsille suunnatun asentajan tiedostosta ${filename} tai klikkaamalla ${get-nonwindows}tästä${/link}. Tämä on JAR-tiedosto, joka täytyy suorittaa Javalla. Toivottavasti ystävästi voi tuplaklikata sitä, mutta jos se ei toimi, kokeile komentoriviltä komennolla "java -jar ${shortfilename}".
+DarknetAddRefToadlet.explainInstallerNonWindows=Löydät viimeisimmän ei Windowsille suunnatun asentajan tiedostosta ${filename} tai klikkaamalla ${get-nonwindows}tästä${/get-nonwindows}. Tämä on JAR-tiedosto, joka täytyy suorittaa Javalla. Toivottavasti ystävästi voi tuplaklikata sitä, mutta jos se ei toimi, kokeile komentoriviltä komennolla "java -jar ${shortfilename}".
 DarknetAddRefToadlet.explainInstallerNonWindowsNotYet=Freenet ei ole vielä onnistunut lataamaan geneeristä asentajaa, mutta voit hakea sen Freenetistä klikkaamalla ${link}tästä${/link}. Tämä on JAR-tiedosto
-DarknetAddRefToadlet.explainInstallerWindows=Löydät viimeisimmän Windows-asentajan nimeltä ${filename} tai menemällä ${get-windows}tänne${/link}
+DarknetAddRefToadlet.explainInstallerWindows=Löydät viimeisimmän Windows-asentajan nimeltä ${filename} tai menemällä ${get-windows}tänne${/get-windows}
 DarknetAddRefToadlet.explainInstallerWindowsNotYet=Freenet ei ole vielä onnistunut lataamaan Windows-aentajaa, mutta voit saada sen Freenetin yli ${link}täältä${/link}.
 DarknetAddRefToadlet.title=Yhdistä ystäväsolmuun
 DarknetConnectionsToadlet.activityTitle=Tämänhetkinen aktiviteetti
