Fix the last one in fred itself.

--- a/src/freenet/l10n/freenet.l10n.it.properties
+++ b/src/freenet/l10n/freenet.l10n.it.properties
@@ -734,9 +734,9 @@ InsertException.shortError.7=Alcuni block hanno esaurito il numero di tentativi 
 InsertException.shortError.8=Non è stato possibile inoltrare la richiesta
 InsertException.shortError.9=Conflitto con dati esistenti
 InsertFreesiteToadlet.content1=Siti web posssono essere caricati ("inseriti") su Freenet in modo anonimo. Una volta caricato, il sito resta su Freenet finché ci sono utenti che vi accedono almeno occasionalmente, è distribuito sulla rete, non è dipendente dal computer che lo ha generato, e non dovrebbe essere possibile rintracciarne l'autore.
-InsertFreesiteToadlet.content2=Sfortunatamente, non è ancora disponibile un' interfaccia integrata per l'inserzione di freesites, operazioone per la quale si suggerisce di usare jSite. la più recente versione è disponibile ${jsite-http}sul sito web di Freenet${/link}, mentre la versione ${jsite-freenet-version}  è già disponibile ${jsite-freenet}su Freenet${/link}.
+InsertFreesiteToadlet.content2=Sfortunatamente, non è ancora disponibile un' interfaccia integrata per l'inserzione di freesites, operazioone per la quale si suggerisce di usare jSite. la più recente versione è disponibile ${jsite-http}sul sito web di Freenet${/jsite-http}, mentre la versione ${jsite-freenet-version}  è già disponibile ${jsite-freenet}su Freenet${/jsite-freenet}.
 InsertFreesiteToadlet.content3=Una volta scaricato jSite e costruito un sito web in HTML, seguire le istruzioni pubblicate sui seguenti freesite:
-InsertFreesiteToadlet.contentThingamablog=In alternativa, Thingamablog è un generatore di blog dall'interfaccia semplice ed intuitiva; la versione compatibile con Freenet è disponibile sia ${thingamablog} sul web${/link} che ${thingamablog-freenet} su Freenet ${/link}.
+InsertFreesiteToadlet.contentThingamablog=In alternativa, Thingamablog è un generatore di blog dall'interfaccia semplice ed intuitiva; la versione compatibile con Freenet è disponibile sia ${thingamablog} sul web${/thingamablog} che ${thingamablog-freenet} su Freenet ${/thingamablog-freenet}.
 InsertFreesiteToadlet.freesiteHowtoExplanation=Istruzioni su come inserire un freesite in una versione più dettagliata
 InsertFreesiteToadlet.publishExplanation=Istruzioni rapide su come inserire freesite
 InsertFreesiteToadlet.title=Upload freesite
