optional topology enforcement

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -904,6 +904,8 @@ Node.oneConnectionPerIP=Limit to one connection per address?
 Node.oneConnectionPerIPLong=Don't allow more than one connection per address? This will make it slightly harder for an attacker to connect more than once to your node as different identities, in order to dominate your routing or make harvesting easier. Also prevents having the same node connected on darknet and opennet simultaneously. 
 Node.opennetEnabled=Enable insecure mode (automatically connect to untrusted nodes)?
 Node.opennetEnabledLong=Enable insecure mode (aka opennet)? If this is enabled, your Freenet node will automatically exchange node references with other untrusted nodes (Strangers as opposed to Friends). But this means that the fact that you are running a node is no longer private, and many attacks are much easier. If you know enough people running Freenet, you should stick to trusted (Friends) connections to them, and turn this off.
+Node.opennetTopologyEnforcement=Opennet Topology Enforcement
+Node.opennetTopologyEnforcementLong=If enabled, the node will prefer opennet peers whose locations conform to a small-world network link pattern around its present location.
 Node.outBWLimit=Output bandwidth limit (bytes per second)
 Node.outBWLimitLong=Hard output bandwidth limit (bytes/sec); Freenet should almost never exceed this
 Node.paddDataPackets=Pad data packets sent by this Freenet node with random data of random length? (READ WARNING BEFORE TURNING OFF!)
