Show stats on bulk transmit success rates.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1018,6 +1018,7 @@ NodeStat.statsPersisterLong=File to store node statistics in (not client statist
 NodeStat.threadLimit=Thread limit
 NodeStat.threadLimitLong=Freenet will try to limit its thread usage to the specified value, refusing new requests
 NodeStats.allRequests=All requests
+NodeStats.bulkSends=Bulk sends
 NodeStats.blockTransfers=Block transfers
 NodeStats.count=Count
 NodeStats.group=Group
