Improve output bandwidth limit description.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -905,7 +905,7 @@ Node.oneConnectionPerIPLong=Don't allow more than one connection per address? Th
 Node.opennetEnabled=Enable insecure mode (automatically connect to untrusted nodes)?
 Node.opennetEnabledLong=Enable insecure mode (aka opennet)? If this is enabled, your Freenet node will automatically exchange node references with other untrusted nodes (Strangers as opposed to Friends). But this means that the fact that you are running a node is no longer private, and many attacks are much easier. If you know enough people running Freenet, you should stick to trusted (Friends) connections to them, and turn this off.
 Node.outBWLimit=Output bandwidth limit (bytes per second)
-Node.outBWLimitLong=Hard output bandwidth limit (bytes/sec); Freenet should almost never exceed this
+Node.outBWLimitLong=Hard output bandwidth limit (bytes/sec); Freenet should almost never exceed this. Normally you should set this to no more than half the your internet connection's upload bandwidth, which is usually much less than your download bandwidth.
 Node.paddDataPackets=Pad data packets sent by this Freenet node with random data of random length? (READ WARNING BEFORE TURNING OFF!)
 Node.paddDataPacketsLong=Pad data packets sent by this Freenet node with random-length content? For security, on a single node, turning this off is bad; if a large part of the network starts doing it, we become very vulnerable to a passive attacker. However, it should improve performance, particularly the payload percentage. You have been warned!
 Node.passOpennetPeersThroughDarknet=Relay opennet noderefs through darknet peers?
