Slightly better title.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1079,7 +1079,7 @@ PeerManagerUserAlert.onlyFewConnsTitle=Only ${count} open connection(s)
 PeerManagerUserAlert.tooHighBwlimitDelayTime=This node has to wait too long for available bandwidth (${delay}ms > ${max}ms). Increase your output bandwidth limit and/or remove some peers to improve the situation.
 PeerManagerUserAlert.tooHighBwlimitDelayTimeTitle=bwlimitDelayTime too high
 PeerManagerUserAlert.tooHighPingTime=Freenet is having trouble talking with its peers quickly enough (${ping}ms > ${max}ms). Increase your output bandwidth limit and/or remove some peers to improve the situation.
-PeerManagerUserAlert.tooHighPingTimeTitle=nodeAveragePingTime too high
+PeerManagerUserAlert.tooHighPingTimeTitle=Internet connection problems: Ping time too high
 PeerManagerUserAlert.tooManyConns=There are too many connections (${count} > ${max}). Adding large numbers of nodes automatically does not produce a small-world topology, hurts routing, and risks producing single points of failure.
 PeerManagerUserAlert.tooManyConnsTitle=Too many open connections
 PeerManagerUserAlert.tooManyDisconnected=This node has too many disconnected peers (${count} > ${max}). This will have a slight impact on your performance as disconnected peers also consume a small amount of bandwidth and CPU. Consider "cleaning up" your peer list. Note that ideally you should connect to nodes run by people you know. Even if not, adding lots of nodes automatically is bad as it does not produce an optimal topology.
