Improve the alert message for too high ping time.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1078,7 +1078,7 @@ PeerManagerUserAlert.oneConn=This node only has one connection. Performance will
 PeerManagerUserAlert.onlyFewConnsTitle=Only ${count} open connection(s)
 PeerManagerUserAlert.tooHighBwlimitDelayTime=This node has to wait too long for available bandwidth (${delay}ms > ${max}ms). Increase your output bandwidth limit and/or remove some peers to improve the situation.
 PeerManagerUserAlert.tooHighBwlimitDelayTimeTitle=bwlimitDelayTime too high
-PeerManagerUserAlert.tooHighPingTime=Freenet is having trouble talking with its peers quickly enough (${ping}ms > ${max}ms). Increase your output bandwidth limit and/or remove some peers to improve the situation.
+PeerManagerUserAlert.tooHighPingTime=Freenet is having trouble talking with its peers quickly enough (${ping}ms > ${max}ms). Your upload bandwidth limit may be too low, in which case you should increase it, or too high, in which case you should decrease it. Normally you should not allow Freenet more than half your upload bandwidth. Also, this problem can be caused by high CPU usage or by network problems outside of Freenet's control. You should try to resolve this as Freenet will work very badly until it is fixed.
 PeerManagerUserAlert.tooHighPingTimeTitle=Internet connection problems: Ping time too high
 PeerManagerUserAlert.tooManyConns=There are too many connections (${count} > ${max}). Adding large numbers of nodes automatically does not produce a small-world topology, hurts routing, and risks producing single points of failure.
 PeerManagerUserAlert.tooManyConnsTitle=Too many open connections
