Better error handling when failed to decrypt/encrypt. Tell the user.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -894,6 +894,10 @@ Node.notEnoughSpaceToAutoEncryptTitle=Insufficient disk space to encrypt the dow
 Node.notEnoughSpaceToAutoEncrypt=There is not enough space so the downloads/uploads queue has not been encrypted. If your node is seized attackers will be able to see what you have downloaded! You should clear enough disk space for the migration (${size}) and restart, or securely delete ${file} (shut down the node first), or switch physical security levels to LOW if you don't need to encrypt it.
 Node.notEnoughSpaceToAutoDecryptTitle=Insufficient disk space to decrypt the downloads queue!
 Node.notEnoughSpaceToAutoDecrypt=There is not enough space so the downloads queue has not been decrypted. Your node will be slightly slower, but this probably isn't a problem. You can shut down your node and remove ${file} if you want to wipe the downloads database, or free up ${size} and restart.
+Node.failedToRenameEncryptingTitle=Failed to rename the downloads queue database while encrypting, downloads database is offline.
+Node.failedToRenameEncrypting=The node was unable to rename the downloads queue database from ${fromfile} to ${tofile} while encrypting it. The downloads database is not accessible until you rename it manually.
+Node.failedToRenameDecryptingTitle=Failed to rename the downloads queue database while decrypting, downloads database is offline.
+Node.failedToRenameDecrypting=The node was unable to rename the downloads queue database from ${fromfile} to ${tofile} while decrypting it. The downloads database is not accessible until you rename it manually.
 Node.notUsingSunVMTitle=Not using a Sun Java
 Node.notUsingSunVM=You are trying to run Freenet under a non-Sun Java: ${vendor} ${version} (${name}). This is not recommended: Freenet may not run well. Please get Sun Java from http://www.java.com/getjava/ if possible.
 Node.notUsingSunVMShort=Freenet is running on a non-Sun Java, this is not recommended, please get the latest Sun Java. 
