Success rates actually include local

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1624,7 +1624,7 @@ StatisticsToadlet.statisticGatheringTitle=Statistics Gathering
 StatisticsToadlet.SSK=SSK
 StatisticsToadlet.STORE=Store
 StatisticsToadlet.storeJobsByPriority=Store checker jobs by priority
-StatisticsToadlet.successByHTL=Success rates by HTL (remote fetches)
+StatisticsToadlet.successByHTL=Success rates by HTL (local and remote)
 StatisticsToadlet.successfulReads=Successful Reads
 StatisticsToadlet.successRate=Success Rate
 StatisticsToadlet.swapOutput=Swapping Output: ${total}.
