Improve inBWLimit strings slightly

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -865,8 +865,8 @@ Node.enableULPRDataPropagationLong=Enable fast propagation of recently requested
 Node.errorApplyingConfig=Error while applying the new config : ${error}
 Node.forceBigShrink=Do large store shrinks immediately (bdbje-index store type only)
 Node.forceBigShrinkLong=Whether to do large store shrinks (over 10%) immediately (rather than waiting for the next node restart). Online shrinks do not preserve the most recently used data, so this is not recommended; use it only if you must have an immediate result. Specific to bdbje-index store type.
-Node.inBWLimit=Input bandwidth limit (bytes per second)
-Node.inBWLimitLong=Input bandwidth limit (bytes/sec); Freenet will try not to exceed this; -1 = 4x set outputBandwidthLimit
+Node.inBWLimit=Download bandwidth limit (bytes per second)
+Node.inBWLimitLong=Download bandwidth limit (bytes/sec, e.g. 200K); Freenet will try not to exceed this, but it is not very accurate; -1 = 4x set outputBandwidthLimit.
 Node.invalidStoreSize=Store size must be at least 32MB
 Node.l10nLanguage=The language Freenet will use to display messages
 Node.l10nLanguageLong=This setting will change the language used to display messages. Keep in mind that some strings won't be translated until next node startup though.
