Improve documentation and have separate option description for darknet vs opennet for oneConnectionPerIP

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -904,8 +904,8 @@ Node.notUsingSunVMShort=Freenet is running on a non-Sun Java, this is not recomm
 Node.notUsingWrapperTitle=Not using the wrapper!
 Node.notUsingWrapper=You are running Freenet without the wrapper. This is not recommended. Freenet will not be able to restart itself, so auto-updating won't work, and if Java crashes, it won't get restarted either. Also Freenet can't generate stack dumps in some places so debugging will be marginally harder.
 Node.notUsingWrapperShort=Freenet is running without the wrapper. This is not recommended.
-Node.oneConnectionPerIP=Limit to one connection per address?
-Node.oneConnectionPerIPLong=Don't allow more than one connection per address? This will make it slightly harder for an attacker to connect more than once to your node as different identities, in order to dominate your routing or make harvesting easier. Also prevents having the same node connected on darknet and opennet simultaneously. 
+Node.oneConnectionPerIP=Limit to one connection per address? (friends)
+Node.oneConnectionPerIPLong=Don't allow more than one friend connection per address? This will make it slightly harder for an attacker to connect more than once to your node as different identities, in order to dominate your routing or make harvesting easier. Also prevents having the same node connected as a friend and stranger simultaneously. Note that this applies to the external IP address, so you should turn this off if you have multiple nodes on a LAN connected as friends.
 Node.opennetEnabled=Enable insecure mode (automatically connect to untrusted nodes)?
 Node.opennetEnabledLong=Enable insecure mode (aka opennet)? If this is enabled, your Freenet node will automatically exchange node references with other untrusted nodes (Strangers as opposed to Friends). But this means that the fact that you are running a node is no longer private, and many attacks are much easier. If you know enough people running Freenet, you should stick to trusted (Friends) connections to them, and turn this off.
 Node.outBWLimit=Output bandwidth limit (bytes per second)
@@ -1061,6 +1061,8 @@ NodeUpdateManager.updateURILong=Where should your Freenet node look for updates?
 NotEnoughNiceLevelsUserAlert.title=Not enough Nice levels available!
 NotEnoughNiceLevelsUserAlert.short=Not enough Nice levels available! Please run Freenet at a lower nice level.
 NotEnoughNiceLevelsUserAlert.content=Your node has detected that it is running at a high nice level. It can't perform well if they aren't enough levels available. Please lower the nice level you're node is running at (Look for PRIORITY in the run.sh file and lower its value)! Currently your node has ${available} levels to play with whereas it would need ${required}.
+OpennetManager.oneConnectionPerIP=Limit to one connection per address? (strangers)
+OpennetManager.oneConnectionPerIPLong=Don't allow more than one stranger connection per address? This will make it slightly harder for an attacker to connect more than once to your node as different identities, in order to dominate your routing or make harvesting easier. Also prevents having the same node connected on as a friend and stranger simultaneously.
 OpennetConnectionsToadlet.successTimeTitle=Last success
 OpennetConnectionsToadlet.successTime=Last time there was a successful CHK fetch from the node
 OpennetConnectionsToadlet.fullTitle=${counts} Strangers (Untrusted Peers) of ${name}
