--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -915,9 +915,9 @@ Node.paddDataPacketsLong=Pad data packets sent by this Freenet node with random-
 Node.passOpennetPeersThroughDarknet=Relay opennet noderefs through darknet peers?
 Node.passOpennetPeersThroughDarknetLong=If true, opennet noderefs (NEVER our own darknet noderef) will be relayed through our darknet peers. So a node (this node, or its peers) can get opennet peers from its darknet peers. This is useful because it allows us to bootstrap new opennet peers after having lost our peers due to downtime, for example. However, it may make traffic analysis slightly easier, so turn it off if you are paranoid.
 Node.port=Darknet port number (UDP)
-Node.portLong=UDP port used by the node to communicate with your Friends' nodes. This must be port forwarded if possible. We use a separate port for opennet i.e. to connections to Strangers.
+Node.portLong=UDP port used by Freenet to communicate with your Friends' nodes. This port should be forwarded in your router if possible. We use a separate port for connections to Strangers.
 Node.opennetPort=Opennet port number (UDP)
-Node.opennetPortLong=UDP port used by the node to communicate with other Strangers i.e. opennet nodes. This must be port forwarded if possible. We use a separate port for darknet (Friends).
+Node.opennetPortLong=UDP port used by Freenet to communicate with Strangers i.e. freenet nodes running in opennet mode. This port should be forwarded in your router if possible. We use a separate port for connections to your Friends' nodes.
 Node.publishOurPeersLocation=Shall we send our peers' locations to our peers?
 Node.publishOurPeersLocationLong=Shall we send our peers' locations to our peers? Doing so helps routing but gives some information away to a potential attacker.
 Node.routeAccordingToOurPeersLocation=Shall we use the locations of the peers of our peers into account for routing purposes?
