Explain store size a bit and slightly improve store type. Thanks people on FMS, although I can't agree that "store size in bytes" is "truly eliptical"

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -937,9 +937,9 @@ Node.storeSaltHashResizeOnStart=Resize store on node start (salt-hash only)
 Node.storeSaltHashResizeOnStartLong=Resize store on node start (salt-hash only). If this is true, Freenet will complete resizing the datastore during startup. This will complete much faster than doing it "on the fly", but on the other hand your Freenet node will not be available for some time while it completes the resize.
 Node.storeSaltHashMigratedShort=Datastore migration finished!
 Node.storeSaltHashMigrated=Datastore migration finished! You may now delete the old datastore files:
-Node.storeSize=Store size in bytes
-Node.storeSizeLong=Store size in bytes
-Node.storeType=Store type (LEAVE THIS ALONE)
+Node.storeSize=Freenet datastore size in bytes
+Node.storeSizeLong=Size of the Freenet datastore, which includes the store and cache, and stores data passing through your node. Freenet uses disk space for many other things, such as temporary files and your downloads, which are separate.
+Node.storeType=Datastore type (LEAVE THIS ALONE)
 Node.storeTypeLong=Datastore type. Currently this can be salt-hash (this is the default, stores data on disk with a lossy hashtable and a Bloom filter), bdb-index (old store format, not recommended), or ram (FOR TESTING ONLY, keep the index and the data in memory, not on disk). Only use ram if you know what you are doing and have enough RAM to store all your data (and note it will not be saved on shutdown)! Changes will not take effect until Freenet has been restarted.
 Node.storeBloomFilterSize=Bloom filter size (total) in bytes
 Node.storeBloomFilterSizeLong=Bloom filter size (total) in bytes. Usually 1/2048th the size of data store is more than enough. Set this to zero to disable bloom filter. Set this to -1 to reset to default.
